format according to airbnb eslint

--- a/package.json
+++ b/package.json
@@ -5,5 +5,15 @@
   "main": "index.js",
   "repository": "http://github.com/dejakob/react-native-modal-walk-through",
   "author": "dejakob",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1"
+  },
+  "scripts": {
+    "lint": "eslint **/*.js"
+  }
 }
